# automattermostatus

./: .gitignore  .gitlab-ci.yml  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  bacon.toml  config.toml.example
.config/: nextest.toml
.github/workflows/: compile.yaml  github-action.yml  lint-format.yaml  release.yml  test.yaml
ci/: Dockerfile  Dockerfile.package  Dockerfile.wine  Makefile  wait-until
distrib/: automattermostatus.desktop  automattermostatus.service
doc/: automattermostatus.1  override.h2m
src/: command.rs  config.rs  lib.rs  main.rs  mattermost.rs  offtime.rs  secret.rs  service.rs  shutdown.rs  state.rs  utils.rs
src/mattermost/: mod.rs  session.rs  status.rs
src/micscan/: linux.rs  macscanmic.xml  mod.rs  osx.rs  osx_parse.rs  windows.rs
src/wifiscan/: linux.rs  macscan.xml  mod.rs  osx.rs  osx_parse.rs  windows.rs  windows_parse.rs
