# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "automattermostatus"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
categories = ["command-line-utilities"]
homepage = "https://gitlab.com/matclab/automattermostatus/"
repository = "https://gitlab.com/matclab/automattermostatus/"
description = "Automate your mattermost custom status with the help of visible wifi SSID."
readme = "README.md" 
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "config.toml.example",
    "README.md",
    "CHANGELOG.md",
    "distrib/automattermostatus.desktop"
]


# We use a separate lib in order to be able to run tests and doctests
[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "automattermostatus"
path= "src/main.rs"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[dependencies]
anyhow = "1.0.45"
paw = "1.0.0"
structopt = { version = "0.3.25", features = ["paw", "wrap_help", "color"], default-features = false }
thiserror = "1.0.30"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.1", features = ["registry", "tracing-log", "ansi", "fmt", "smallvec", "env-filter"], default-features = false }
chrono = { version = "0.4.19", features = ["serde"] }
shell-words = "1.0.0"
quick-xml = "0.22.0"
tracing-log = "0.1.2"
figment = { version = "0.10.6", features = ["toml"] }
directories-next = "2.0.0"
ureq = { version = "2.3.0", features = ["json"] }
toml = "0.5.8"
keyring = "0.10.3"
#merge = "0.1.0"

[dev-dependencies]
mktemp = "0.4.1"
httpmock = "0.6.2"
mockall = "0.10.2"
test-env-log = { version = "0.2.7", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.1", features = [ "fmt",  "env-filter"], default-features = false }

#[source.crates-io]
#replace-with = "vendored-sources"
#[source.vendored-sources]
#directory = "vendor"

