# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "automattermostatus"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
categories = ["command-line-utilities"]
homepage = "https://gitlab.com/matclab/automattermostatus/"
repository = "https://gitlab.com/matclab/automattermostatus/"
description = "Automate your mattermost custom status with the help of visible wifi SSID."
authors =  ["Mathieu Clabaut <mathieu@clabaut.net>"]
readme = "README.md" 
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "config.toml.example",
    "README.md",
    "CHANGELOG.md",
    "distrib/automattermostatus.desktop",
    "distrib/automattermostatus.service",
]

[package.metadata.deb]
extended-description = """
Automate mattermost status with the help of wifi network.

Use current visible wifi SSID to automate your mattermost status. This program
is meant to either be running in background or be call regularly with option
`--delay 0`. It will then update your mattermost custom status according to
the config file
"""
assets = [
    ["target/release/automattermostatus", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/automattermostatus/README", "644"],
    ["config.toml.example", "usr/share/doc/automattermostatus/config.toml.example", "644"],
    ["distrib/automattermostatus.desktop", "etc/xdg/autostart/automattermostatus.desktop", "644"],
    ["doc/automattermostatus.1", "usr/share/man/man1/automattermostatus.1", "644"]
]


# We use a separate lib in order to be able to run tests and doctests
[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "automattermostatus"
path= "src/main.rs"


[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[dependencies]
anyhow = "1.0.57"
paw = "1.0.0"
structopt = { version = "0.3.26", features = ["paw", "wrap_help", "color"], default-features = false }
thiserror = "1.0.31"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["registry", "tracing-log", "ansi", "fmt", "smallvec", "env-filter"], default-features = false }
chrono = { version = "0.4.19", features = ["serde"] }
shell-words = "1.1.0"
quick-xml = "0.22.0"
tracing-log = "0.1.3"
figment = { version = "0.10.6", features = ["toml"] }
directories-next = "2.0.0"
ureq = { version = "2.4.0", features = ["json"] }
toml = "0.5"
keyring = "0.10.4"
derivative = "2.2.0"
winapi = "0.3.9"
winreg = "0.11"
#merge = "0.1.0"
#

[target.'cfg(target_os="linux")'.dependencies]
alsa = "0.7.0"
procfs = {version="0.14.2", features =  [ ]} 
pulsectl-rs = {git="https://github.com/duhdugg/pulsectl-rs", rev="98199d4", optional=true}

[dev-dependencies]
mktemp = "0.4.1"
httpmock = "0.6.7"
mockall = "0.11.0"
rusty-hook = "0.11.2"
test-log = { version = "0.2.10", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.11", features = [ "fmt",  "env-filter"], default-features = false }

#[source.crates-io]
#replace-with = "vendored-sources"
#[source.vendored-sources]
#directory = "vendor"


[features]
pulseaudio = ["dep:pulsectl-rs"]
default= ["pulseaudio"]


