# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "automattermostatus"
version = "0.2.6"
edition = "2021"
license = "Apache-2.0"
categories = ["command-line-utilities"]
homepage = "https://gitlab.com/matclab/automattermostatus/"
repository = "https://gitlab.com/matclab/automattermostatus/"
description = "Automate your mattermost custom status with the help of visible wifi SSID."
authors =  ["Mathieu Clabaut <mathieu@clabaut.net>"]
#depends = ["libdbus-1", "libpulse0", "libasound2"]
readme = "README.md" 
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "config.toml.example",
    "README.md",
    "CHANGELOG.md",
    "distrib/automattermostatus.desktop",
    "distrib/automattermostatus.service",
]

[package.metadata.deb]
extended-description = """
Automate mattermost status with the help of wifi network.

Use current visible wifi SSID to automate your mattermost status. This program
is meant to either be running in background or be call regularly with option
`--delay 0`. It will then update your mattermost custom status according to
the config file
"""
assets = [
    ["target/release/automattermostatus", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/automattermostatus/README", "644"],
    ["config.toml.example", "usr/share/doc/automattermostatus/config.toml.example", "644"],
    ["distrib/automattermostatus.desktop", "etc/xdg/autostart/automattermostatus.desktop", "644"],
    ["doc/automattermostatus.1", "usr/share/man/man1/automattermostatus.1", "644"]
]


# We use a separate lib in order to be able to run tests and doctests
[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "automattermostatus"
path= "src/main.rs"


[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[dependencies]
anyhow = "1.0.99"
paw = "1.0.0"
structopt = { version = "0.3.26", features = ["paw", "wrap_help", "color"], default-features = false }
thiserror = "2.0.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "tracing-log", "ansi", "fmt", "smallvec", "env-filter"], default-features = false }
chrono = { version = "0.4.41", features = ["serde"] }
shell-words = "1.1.0"
quick-xml = "0.38.2"
tracing-log = "0.2.0"
figment = { version = "0.10.19", features = ["toml"] }
directories-next = "2.0.0"
ureq = { version = "3.1.0", features = ["json"] }
toml = "0.9"
derivative = "2.2.0"
http = "1.3.1"
#merge = "0.1.0"
#

[target.'cfg(target_os="linux")'.dependencies]
alsa = "0.9.1"
procfs = {version="0.17.0", features =  [ ]} 
pulsectl-rs = {git="https://github.com/duhdugg/pulsectl-rs", rev="98199d4", optional=true}
keyring = { version = "3", features = [ "sync-secret-service"] }

[target.'cfg(target_os="windows")'.dependencies]
winreg = "0.55"
keyring = { version = "3", features = [ "windows-native", "sync-secret-service"] }

[target.'cfg(target_os="macos")'.dependencies]
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }
[dev-dependencies]
mktemp = "0.5.1"
httpmock = "0.7.0"
mockall = "0.13.1"
rusty-hook = "0.11.2"
test-log = { version = "0.2.18", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.19", features = [ "fmt",  "env-filter"], default-features = false }

#[source.crates-io]
#replace-with = "vendored-sources"
#[source.vendored-sources]
#directory = "vendor"


[features]
pulseaudio = ["dep:pulsectl-rs"]
default= ["pulseaudio"]


